# NetMedic

./: .editorconfig  .gitignore  .netmedic_config.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE  README-zh-CN.md  README-zh-TW.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  translation.yml
.github/workflows/: ci.yml  cleanup-actions-storage.yml
.omc/: README.md
Formula/: netmedic.rb
locales/: en.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json
netmedic/: __init__.py  __main__.py  cli.py  config.py  i18n.py  launcher.py  platform_adapter.py  reporter.py  user_config.py  utils.py
netmedic/data/: cn_domains.py  countries.py  dns_scope.py  public_dns.py
netmedic/detect/: adapter.py  connectivity.py  dns_pollution.py  dns_speed.py  doh_speed.py  hijack.py  ipv6.py  mtu.py  outage.py
netmedic/fix/: backup.py  dns_apply.py  doh.py  flush.py  hosts.py  hosts_repair.py  nrpt.py
netmedic/locales/: en.json  ja.json  ko.json  zh-CN.json  zh-TW.json
netmedic/ui/: __init__.py  actions.py  keys.py  menu.py  widgets.py  wizard.py
